Changes Logos and Pictures on main page

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
+.northwestern.logo:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
   animation: logo-spin infinite 20s linear;
 }
