--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -40,7 +40,10 @@ body {
 }
 
 
-
+.about-h1 {
+    text-align: left;
+    font-size: 2rem;
+}
 /* @media (min-width: 640px) {
     .about-me-grid {
         grid-template-columns: repeat(2, 1fr);
